# Reconhecimento_Facial_para_Registro_de_Ponto

./: README.md
ReconhecimentoFacial2/: CMakeLists.txt
ReconhecimentoFacial2/logs/: log_sync.txt
ReconhecimentoFacial2/python/: check_and_pull_modelos.py  registro.csv  sync_csv_to_google.py  train.py  upload_modelos.py
ReconhecimentoFacial2/src/: attend_client_ssd1306.cpp  attend_ssd1306  enroll  enroll.cpp
ReconhecimentoFacial2/src/Server/: cadastro_server  cadastro_server.cpp
ReconhecimentoFacial2/src/Testes/: attend_client  attend_client.cpp  recognize_local  recognize_local.cpp  test_cam.cpp
ReconhecimentoFacial2/src/Testes/ST7789_Display_Test/: CMakeLists.txt  ST7789.cpp  ST7789.h  fonts.hpp  main.cpp
ReconhecimentoFacial2/src/Testes/ssd1306/: glcdfont.cpp  glcdfont.h  main.cpp  ssd1306_text
ReconhecimentoFacial2/src/sincronizacao/: check_and_pull_git  check_and_pull_git.cpp  sync_registro_git  sync_registro_git.cpp  upload_modelos_git  upload_modelos_git.cpp
Servidor_PC/: build.bat  cadastro_http.cpp  mongoose.c  mongoose.h
